syntax = "proto3";
package auth;

message SignUpRequest {
    string username = 1;
    int32 pin = 2;
}

message SignUpResponse {
    string message = 1;
    bool success = 2;
}

message SignInRequest {
    string username = 1;
    int32 pin = 2;
}

message SignInResponse {
    string token = 1;
}

service Auth {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc SignIn (SignInRequest) returns (SignInResponse);
}